# SG_proj_007

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Readme.md  advanced_007_report.md  api.py  app.py  benchmark_report.md  development_log.txt  docker-compose.yml  launch.py  main.py  mypy.ini  pyproject.toml  requirements.txt  test_pipeline.py
.github/workflows/: python-app.yml  python-ci.yml
scripts/: audit_portability.py  debug_depth_error.py  debug_depth_error_full.py  download_weights.sh  setup_env.sh  verify_phase7.py  verify_phase9.py  verify_phase9_final.py
sg_terra/: __init__.py
sg_terra/curv/: curvature.py
sg_terra/match/: engine.py
sg_terra/seg/: sam2_wrapper.py
sg_terra/topo/: depth_wrapper.py
sg_terra/topo/depth_anything_v2/: dinov2.py
sg_terra/topo/depth_anything_v2/dinov2_layers/: __init__.py  attention.py  block.py  swiglu_ffn.py
src/curv/: curvature.py  curvature_pcd.py
src/match/: engine.py
src/seg/: sam2_wrapper.py
src/topo/: calibration.py  depth_wrapper.py  multiview_fuser.py
src/topo/depth_anything_v2/dinov2_layers/: attention.py
tests/: test_api.py  test_engine.py
