[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sg-terra"
version = "0.1.0"
description = "Topographic Evaluation & Resin-film Recommendation AI"
readme = "Readme.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "streamlit>=1.30.0",
    "plotly>=5.10.0",
    "streamlit-image-coordinates",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart",
    "sam-2 @ git+https://github.com/facebookresearch/segment-anything-2.git",
    "loguru>=0.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "httpx"
]
[tool.setuptools.packages.find]
where = ["."]
include = ["sg_terra", "sg_terra.*"]

[tool.pytest.ini_options]
pythonpath = ["."]
